crates/spoke-connect/bindings/swift/generated/spoke_connectFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t, int8_t
    );
typedef void (*UniffiForeignFutureDroppedCallback)(uint64_t
    );
typedef void (*UniffiCallbackInterfaceFree)(uint64_t
    );
typedef uint64_t (*UniffiCallbackInterfaceClone)(uint64_t
    );
typedef struct UniffiForeignFutureDroppedCallbackStruct {
    uint64_t handle;
    UniffiForeignFutureDroppedCallback _Nonnull free;
} UniffiForeignFutureDroppedCallbackStruct;
typedef struct UniffiForeignFutureResultU8 {
    uint8_t returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureResultU8;
typedef void (*UniffiForeignFutureCompleteU8)(uint64_t, UniffiForeignFutureResultU8
    );
typedef struct UniffiForeignFutureResultI8 {
    int8_t returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureResultI8;
typedef void (*UniffiForeignFutureCompleteI8)(uint64_t, UniffiForeignFutureResultI8
    );
typedef struct UniffiForeignFutureResultU16 {
    uint16_t returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureResultU16;
typedef void (*UniffiForeignFutureCompleteU16)(uint64_t, UniffiForeignFutureResultU16
    );
typedef struct UniffiForeignFutureResultI16 {
    int16_t returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureResultI16;
typedef void (*UniffiForeignFutureCompleteI16)(uint64_t, UniffiForeignFutureResultI16
    );
typedef struct UniffiForeignFutureResultU32 {
    uint32_t returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureResultU32;
typedef void (*UniffiForeignFutureCompleteU32)(uint64_t, UniffiForeignFutureResultU32
    );
typedef struct UniffiForeignFutureResultI32 {
    int32_t returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureResultI32;
typedef void (*UniffiForeignFutureCompleteI32)(uint64_t, UniffiForeignFutureResultI32
    );
typedef struct UniffiForeignFutureResultU64 {
    uint64_t returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureResultU64;
typedef void (*UniffiForeignFutureCompleteU64)(uint64_t, UniffiForeignFutureResultU64
    );
typedef struct UniffiForeignFutureResultI64 {
    int64_t returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureResultI64;
typedef void (*UniffiForeignFutureCompleteI64)(uint64_t, UniffiForeignFutureResultI64
    );
typedef struct UniffiForeignFutureResultF32 {
    float returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureResultF32;
typedef void (*UniffiForeignFutureCompleteF32)(uint64_t, UniffiForeignFutureResultF32
    );
typedef struct UniffiForeignFutureResultF64 {
    double returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureResultF64;
typedef void (*UniffiForeignFutureCompleteF64)(uint64_t, UniffiForeignFutureResultF64
    );
typedef struct UniffiForeignFutureResultRustBuffer {
    RustBuffer returnValue;
    RustCallStatus callStatus;
} UniffiForeignFutureResultRustBuffer;
typedef void (*UniffiForeignFutureCompleteRustBuffer)(uint64_t, UniffiForeignFutureResultRustBuffer
    );
typedef struct UniffiForeignFutureResultVoid {
    RustCallStatus callStatus;
} UniffiForeignFutureResultVoid;
typedef void (*UniffiForeignFutureCompleteVoid)(uint64_t, UniffiForeignFutureResultVoid
    );
typedef void (*UniffiCallbackInterfaceToolHandlerMethod0)(uint64_t, RustBuffer, RustBuffer* _Nonnull, 
        RustCallStatus *_Nonnull uniffiCallStatus
    );
typedef void (*UniffiCallbackInterfaceTransportMethod0)(uint64_t, RustBuffer, void* _Nonnull, 
        RustCallStatus *_Nonnull uniffiCallStatus
    );
typedef void (*UniffiCallbackInterfaceTransportMethod1)(uint64_t, RustBuffer* _Nonnull, 
        RustCallStatus *_Nonnull uniffiCallStatus
    );
typedef void (*UniffiCallbackInterfaceTransportMethod2)(uint64_t, void* _Nonnull, 
        RustCallStatus *_Nonnull uniffiCallStatus
    );
typedef struct UniffiVTableCallbackInterfaceToolHandler {
    UniffiCallbackInterfaceFree _Nonnull uniffiFree;
    UniffiCallbackInterfaceClone _Nonnull uniffiClone;
    UniffiCallbackInterfaceToolHandlerMethod0 _Nonnull handle;
} UniffiVTableCallbackInterfaceToolHandler;
typedef struct UniffiVTableCallbackInterfaceTransport {
    UniffiCallbackInterfaceFree _Nonnull uniffiFree;
    UniffiCallbackInterfaceClone _Nonnull uniffiClone;
    UniffiCallbackInterfaceTransportMethod0 _Nonnull send;
    UniffiCallbackInterfaceTransportMethod1 _Nonnull recv;
    UniffiCallbackInterfaceTransportMethod2 _Nonnull close;
} UniffiVTableCallbackInterfaceTransport;
uint64_t uniffi_spoke_connect_fn_clone_inboundsequence(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_free_inboundsequence(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_constructor_inboundsequence_new(RustCallStatus *_Nonnull out_status
    
);
uint64_t uniffi_spoke_connect_fn_method_inboundsequence_advance(uint64_t ptr, int64_t sequence, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_clone_noncestore(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void uniffi_spoke_connect_fn_free_noncestore(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_constructor_noncestore_new(RustCallStatus *_Nonnull out_status
    
);
int8_t uniffi_spoke_connect_fn_method_noncestore_check_and_record(uint64_t ptr, RustBuffer peer_id, RustBuffer nonce, RustCallStatus *_Nonnull out_status
);
uint64_t uniffi_spoke_connect_fn_clone_outboundsequence(uint64_t handle, RustCallStatus *_Nonnull out_status
);