crates/spoke-connect/bindings/csharp/generated/spoke_connect.cs


// This is an implementation detail that will be called internally by the public API.
#if NET8_0_OR_GREATER
static partial class _UniFFILib {
#else
static class _UniFFILib {
#endif
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiRustFutureContinuationCallback(
        ulong @data,sbyte @pollResult
    );
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureDroppedCallback(
        ulong @handle
    );
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiCallbackInterfaceFree(
        ulong @handle
    );
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate ulong UniffiCallbackInterfaceClone(
        ulong @handle
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureDroppedCallbackStruct
    {
        public ulong @handle;
        public IntPtr @free;
    }
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureResultU8
    {
        public byte @returnValue;
        public UniffiRustCallStatus @callStatus;
    }
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteU8(
        ulong @callbackData,_UniFFILib.UniffiForeignFutureResultU8 @result
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureResultI8
    {
        public sbyte @returnValue;
        public UniffiRustCallStatus @callStatus;
    }
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteI8(
        ulong @callbackData,_UniFFILib.UniffiForeignFutureResultI8 @result
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureResultU16
    {
        public ushort @returnValue;
        public UniffiRustCallStatus @callStatus;
    }
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteU16(
        ulong @callbackData,_UniFFILib.UniffiForeignFutureResultU16 @result
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureResultI16
    {
        public short @returnValue;
        public UniffiRustCallStatus @callStatus;
    }
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteI16(
        ulong @callbackData,_UniFFILib.UniffiForeignFutureResultI16 @result
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureResultU32
    {
        public uint @returnValue;
        public UniffiRustCallStatus @callStatus;
    }
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteU32(
        ulong @callbackData,_UniFFILib.UniffiForeignFutureResultU32 @result
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureResultI32
    {
        public int @returnValue;
        public UniffiRustCallStatus @callStatus;
    }
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteI32(
        ulong @callbackData,_UniFFILib.UniffiForeignFutureResultI32 @result
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureResultU64
    {
        public ulong @returnValue;
        public UniffiRustCallStatus @callStatus;
    }
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteU64(
        ulong @callbackData,_UniFFILib.UniffiForeignFutureResultU64 @result
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureResultI64
    {
        public long @returnValue;
        public UniffiRustCallStatus @callStatus;
    }
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteI64(
        ulong @callbackData,_UniFFILib.UniffiForeignFutureResultI64 @result
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureResultF32
    {
        public float @returnValue;
        public UniffiRustCallStatus @callStatus;
    }
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteF32(
        ulong @callbackData,_UniFFILib.UniffiForeignFutureResultF32 @result
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureResultF64
    {
        public double @returnValue;
        public UniffiRustCallStatus @callStatus;
    }
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteF64(
        ulong @callbackData,_UniFFILib.UniffiForeignFutureResultF64 @result
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureResultRustBuffer
    {
        public RustBuffer @returnValue;
        public UniffiRustCallStatus @callStatus;
    }
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteRustBuffer(
        ulong @callbackData,_UniFFILib.UniffiForeignFutureResultRustBuffer @result
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiForeignFutureResultVoid
    {
        public UniffiRustCallStatus @callStatus;
    }
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiForeignFutureCompleteVoid(
        ulong @callbackData,_UniFFILib.UniffiForeignFutureResultVoid @result
    );
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiCallbackInterfaceToolHandlerMethod0(
        ulong @uniffiHandle,RustBuffer @argumentsJson,IntPtr /*RustBuffer*/ @uniffiOutReturn,ref UniffiRustCallStatus _uniffi_out_err
    );
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiCallbackInterfaceTransportMethod0(
        ulong @uniffiHandle,RustBuffer @envelope,IntPtr @uniffiOutReturn,ref UniffiRustCallStatus _uniffi_out_err
    );
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiCallbackInterfaceTransportMethod1(
        ulong @uniffiHandle,IntPtr /*RustBuffer*/ @uniffiOutReturn,ref UniffiRustCallStatus _uniffi_out_err
    );
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void UniffiCallbackInterfaceTransportMethod2(
        ulong @uniffiHandle,IntPtr @uniffiOutReturn,ref UniffiRustCallStatus _uniffi_out_err
    );
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiVTableCallbackInterfaceToolHandler
    {
        public IntPtr @uniffiFree;
        public IntPtr @uniffiClone;
        public IntPtr @handle;
    }
    [StructLayout(LayoutKind.Sequential)]
    public struct UniffiVTableCallbackInterfaceTransport
    {
        public IntPtr @uniffiFree;
        public IntPtr @uniffiClone;
        public IntPtr @send;
        public IntPtr @recv;
        public IntPtr @close;
    }
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

    static _UniFFILib() {
        _UniFFILib.uniffiCheckContractApiVersion();
        _UniFFILib.uniffiCheckApiChecksums();
        
        UniffiCallbackInterfaceToolHandler.Register();
        UniffiCallbackInterfaceTransport.Register();
        }

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ulong uniffi_spoke_connect_fn_clone_inboundsequence(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void uniffi_spoke_connect_fn_free_inboundsequence(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ulong uniffi_spoke_connect_fn_constructor_inboundsequence_new(ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ulong uniffi_spoke_connect_fn_method_inboundsequence_advance(ulong @ptr,long @sequence,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ulong uniffi_spoke_connect_fn_clone_noncestore(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     void uniffi_spoke_connect_fn_free_noncestore(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ulong uniffi_spoke_connect_fn_constructor_noncestore_new(ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     sbyte uniffi_spoke_connect_fn_method_noncestore_check_and_record(ulong @ptr,RustBuffer @peerId,RustBuffer @nonce,ref UniffiRustCallStatus _uniffi_out_err
    );

    #if NET8_0_OR_GREATER
    [LibraryImport("spoke_connect")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial
#else
    [DllImport("spoke_connect", CallingConvention = CallingConvention.Cdecl)]
    public static extern
#endif
     ulong uniffi_spoke_connect_fn_clone_outboundsequence(ulong @handle,ref UniffiRustCallStatus _uniffi_out_err
    );
